--- a/library.properties
+++ b/library.properties
@@ -7,4 +7,4 @@ paragraph=This library makes all the accessories of the NanoProtoShield accessab
 category=Other
 url=https://github.com/ZachEnglish/NanoProtoShield
 architectures=*
-depends=Adafruit BusIO, Adafruit Unified Sensor, Adafruit GFX Library, Adafruit SSD1306, Adafruit NeoPixel, Adafruit LED Backpack Library, OneWire, DallasTemperature, MPU6050_light, LiquidCrystal_I2C, PinChangeInterrupt
+depends=Adafruit BusIO, Adafruit Unified Sensor, Adafruit GFX Library, Adafruit SSD1306, Adafruit NeoPixel, Adafruit LED Backpack Library, OneWire, DallasTemperature, MPU6050_light, LiquidCrystal I2C, PinChangeInterrupt
